plugins {
    id 'java'
    id 'application'
}

group 'edu.ua.team7'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.openjfx:javafx-controls:17'
    implementation 'org.openjfx:javafx-fxml:17'
}

application {
    mainClassName = 'edu.ua.team7.chocAn.Main'
}

run {
    jvmArgs = [
            '--module-path', 'lib',
            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}
